@@ -3,6 +3,7 @@
 ##nagelfar syntax DiffUtil::LocateDiffExe x
 ###nagelfar syntax DiffUtil::diffStrings o* x x
 ##nagelfar syntax dde s x
+##nagelfar syntax dnd s x*
 ##nagelfar syntax safeLoad x n
 ##nagelfar syntax helpWin x x
 ##nagelfar syntax commonYScroll x x*
@@ -12,4 +13,102 @@
 ##nagelfar syntax wcb::callback 4
 ##nagelfar syntax vfs::mk4::Mount r 2
 ##nagelfar syntax vfs::unmount 1
-##nagelfar syntax ttk::entryX x p*
+###nagelfar syntax ttk::entryX x p*
+##nagelfar syntax ::tk::GetSelection x x
+##nagelfar syntax ::tk::ScrollButton2Down x x x
+##nagelfar syntax console x
+##nagelfar syntax registry x x x
+##nagelfar syntax pdf4tcl::getPaperSize x
+##nagelfar syntax pdf4tcl::getPaperSizeList
+##nagelfar syntax twapi::get_foreground_window
+##nagelfar syntax twapi::get_window_coordinates x
+##nagelfar syntax twapi::get_window_at_location x x
+##nagelfar syntax twapi::set_focus x
+##nagelfar syntax twapi::send_keys x
+##nagelfar syntax twapi::get_window_coordinates x
+
+# Operators
+##nagelfar syntax + x*
+##nagelfar syntax - x x*
+##nagelfar syntax * x*
+##nagelfar syntax / x x*
+
+# This is the generic definitions needed for Snit.
+
+##nagelfar syntax _stdclass_snit s x*
+##nagelfar subcmd _stdclass_snit destroy configurelist configure
+##nagelfar syntax _stdclass_snit\ destroy 0
+##nagelfar syntax _stdclass_snit\ configurelist x
+##nagelfar syntax _stdclass_snit\ configure x*
+
+##nagelfar syntax snit::type do=_stdclass_snit cn
+##nagelfar syntax snit::type::method dm
+##nagelfar syntax snit::type::constructor cv
+##nagelfar syntax snit::type::destructor cl
+##nagelfar syntax snit::type::option x p*
+##nagelfar syntax snit::type::component x
+##nagelfar syntax snit::type::delegate x*
+##nagelfar syntax snit::type::install s x*
+
+##nagelfar syntax snit::widgetadaptor do=_stdclass_snit cn
+##nagelfar syntax snit::widgetadaptor::method dm
+##nagelfar syntax snit::widgetadaptor::constructor cv
+##nagelfar syntax snit::widgetadaptor::destructor cl
+##nagelfar syntax snit::widgetadaptor::delegate x*
+##nagelfar syntax snit::widgetadaptor::installhull x*
+##nagelfar syntax snit::widgetadaptor::from l x*
+##nagelfar syntax snit::widgetadaptor::component x
+##nagelfar syntax snit::widgetadaptor::install s x*
+##nagelfar syntax snit::widgetadaptor::option x p*
+
+##nagelfar syntax snit::widget do=_stdclass_snit cn
+##nagelfar syntax snit::widget::method dm
+##nagelfar syntax snit::widget::constructor cv
+##nagelfar syntax snit::widget::destructor cl
+##nagelfar syntax snit::widget::delegate x*
+##nagelfar syntax snit::widget::installhull x*
+##nagelfar syntax snit::widget::from l x*
+##nagelfar syntax snit::widget::hulltype x
+##nagelfar syntax snit::widget::widgetclass x
+##nagelfar syntax snit::widget::myvar l
+##nagelfar syntax snit::widget::mymethod x x*
+##nagelfar return snit::widget::myvar varName
+##nagelfar syntax snit::widget::component x
+##nagelfar syntax snit::widget::install s x*
+##nagelfar syntax snit::widget::option x p*
+
+# This is the annotation needed for this object definition
+
+##nagelfar syntax eskilprint dc=_obj,eskilprint p*
+##nagelfar option eskilprint -file -cpl -cpln -headsize -headleft -headright -headnpages -margin -paper
+##nagelfar return eskilprint _obj,eskilprint
+##nagelfar subcmd+ _obj,eskilprint text newLine
+
+##nagelfar implicitvar snit::type::eskilprint self\ _obj,eskilprint width height pdf hoy fontsize linesize nlines ox1 ox2 oy page options
+
+# This is the annotation needed for this object definition
+
+##nagelfar syntax DirDiff dc=_obj,DirDiff p*
+###nagelfar option DirDiff
+##nagelfar return DirDiff _obj,DirDiff
+##nagelfar subcmd+ _obj,DirDiff text newLine
+
+##nagelfar implicitvar snit::widget::DirDiff self\ _obj,DirDiff statusVar hull win self tree
+
+# This is the annotation needed for this object definition
+
+##nagelfar syntax DirCompareTree dc=_obj,DirCompareTree p*
+##nagelfar option DirCompareTree -leftdirvariable -rightdirvariable -statusvar
+##nagelfar return DirCompareTree _obj,DirCompareTree
+##nagelfar subcmd+ _obj,DirCompareTree text newLine
+
+##nagelfar implicitvar snit::widget::DirCompareTree self\ _obj,DirCompareTree hull win self tree hsb vsb options AfterId PauseBgProcessing IdleQueue IdleQueueArr leftMark rightMark leftDir rightDir
+
+# This is the annotation needed for this object definition
+
+##nagelfar syntax ttk::entryX dc=_obj,ttk::entryX p*
+##nagelfar option ttk::entryX -width -textvariable -style
+##nagelfar return ttk::entryX _obj,ttk::entryX
+##nagelfar subcmd+ _obj,ttk::entryX text newLine
+
+##nagelfar implicitvar snit::widgetadaptor::ttk::entryX self\ _obj,ttk::entryX hull win self  options
